--- a/app/views/flex_reports/_simple_header.html.erb
+++ b/app/views/flex_reports/_simple_header.html.erb
@@ -16,6 +16,7 @@
     <% if rf.include? 'out_of_district_trips' %><th class="wrap number">Out of District Trips</th><% end %>
     <% if rf.include? 'customer_trips' %><th class="wrap number">Customers</th><% end %>
     <% if rf.include? 'guest_and_attendant_trips' %><th class="wrap number">Guests and Attendants</th><% end %>
+    <% if rf.include? 'volunteer_trips' %><th class="wrap number">Volunteer Trips</th><% end %>
     <% if rf.include? 'total_trips' %><th class="wrap number">Total Trips</th><% end %>
     <% if rf.include? 'mileage' %><th rowspan="2" class="wrap number">Mileage</th><% end %>
     <% if rf.include? 'driver_volunteer_hours' %><th class="wrap number">Volunteer Driver Hours</th><% end %>
