--- a/app/views/flex_reports/_columns.html.erb
+++ b/app/views/flex_reports/_columns.html.erb
@@ -54,7 +54,7 @@
       </li>
       <li>
         <input type="checkbox" <%= checked?("volunteer_trips") %> name="flex_report[fields[volunteer_trips]]" id="volunteer_trips" value="1" /> 
-        <label for="volunteer_trips">Volunteer Trips</label>
+        <label for="volunteer_trips">Volunteer Trips (Beta)</label>
       </li>
       <li>
         <input type="checkbox" <%= checked?("total_trips") %> name="flex_report[fields[total_trips]]" id="total_trips" value="1" /> 
