--- a/app/views/allocations/index.html.erb
+++ b/app/views/allocations/index.html.erb
@@ -6,13 +6,19 @@
 <div id="page-header">
   <h1>Listing Allocations</h1>
 </div>
-
-<%= will_paginate @allocations %>
+<div class="pagination">
+  <% @provider_index.each do |x| %>
+    <%=
+      link_to_unless_current x, allocations_path(filter: x) do
+        content_tag(:em, x, class: :current)
+      end
+    %>
+  <% end %>
+</div>
 <table>
   <% @grouped_allocations.each do |provider_name, group| %>
-
     <tr>
-      <th><%= provider_name %> Allocations</th>
+      <th><%= provider_name %></th>
       <th>Activated On</th>
       <th>Inactivated On</th>
       <th>Program</th>
@@ -20,7 +26,6 @@
       <th>County</th>
       <th></th>
     </tr>
-
     <% group.each do |allocation| %>
       <tr>
         <td><%= link_to allocation.name, edit_allocation_path(allocation) %></td>
@@ -34,5 +39,3 @@
     <% end %>
   <% end %>
 </table>
-<%= will_paginate @allocations %>
-
