Substantial changes to flex reports
added ability to filter and group by service type
added ability to filter and group by trip collection method
refactoring of @report.fields in views
beginning of development summary report

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -5,6 +5,7 @@
 <ul>
   <li><%= link_to "Allocations", :controller => "allocations" %></li>
   <li><%= link_to "Programs", :controller => "programs" %></li>
+  <li><%= link_to "Service Types", :controller => "service_types" %></li>
   <li><%= link_to "Providers", :controller => "providers" %></li>
   <li><%= link_to "F.E. Projects", :controller => "projects" %></li>
   <li><%= link_to "Funding Sources", :controller => "funding_sources" %></li>
@@ -18,6 +19,6 @@
 </ul>
 <h2>Version Information</h2>
 <ul>
-  <li>Ruby: <%= RUBY_VERSION %> p<%= RUBY_PATCHLEVEL %></li>
+  <li>Ruby: <%= RUBY_VERSION %></li>
   <li>Rails: <%= Rails.version %></li>
 </ul>
