--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -8,167 +8,167 @@
   <td class="inner-most-field">
     <%= label.present? ? label : "Unspecified" %>
   </td>
-  <% if @report.fields.include? 'funds' %>
+  <% if columns.include? 'funds' %>
     <td class="number">
       <%= number_to_currency(row.funds, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'agency_other' %>
+  <% if columns.include? 'agency_other' %>
     <td class="number">
       <%= number_to_currency(row.agency_other, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'vehicle_maint' %>
+  <% if columns.include? 'vehicle_maint' %>
     <td class="number">
       <%= number_to_currency(row.vehicle_maint, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'administrative' %>
+  <% if columns.include? 'administrative' %>
     <td class="number">
       <%= number_to_currency(row.administrative, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'operations' %>
+  <% if columns.include? 'operations' %>
     <td class="number">
       <%= number_to_currency(row.operations, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'donations' %>
+  <% if columns.include? 'donations' %>
     <td class="number">
       <%= number_to_currency(row.donations, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'total' %>
+  <% if columns.include? 'total' %>
     <td class="number total">
       <%= number_to_currency(row.total, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'in_district_trips' %>
+  <% if columns.include? 'in_district_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.in_district_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'out_of_district_trips' %>
+  <% if columns.include? 'out_of_district_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.out_of_district_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'customer_trips' %>
+  <% if columns.include? 'customer_trips' %>
     <td class="number">
       <%= has_trips ? raw("&mdash;") : number_with_delimiter(row.customer_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'guest_and_attendant_trips' %>
+  <% if columns.include? 'guest_and_attendant_trips' %>
     <td class="number">
       <%= has_trips ? raw("&mdash;") : number_with_delimiter(row.guest_and_attendant_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'volunteer_trips' %>
+  <% if columns.include? 'volunteer_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.volunteer_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'total_trips' %>
+  <% if columns.include? 'total_trips' %>
     <td class="number total">
       <%= number_with_delimiter(row.total_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'turn_downs' %>
+  <% if columns.include? 'turn_downs' %>
     <td class="number">
       <%= number_with_delimiter(row.turn_downs.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'no_shows' %>
+  <% if columns.include? 'no_shows' %>
     <td class="number">
       <%= has_trips ? raw("&mdash;") : number_with_delimiter(row.no_shows.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'cancellations' %>
+  <% if columns.include? 'cancellations' %>
     <td class="number">
       <%= has_trips ? raw("&mdash;") : number_with_delimiter(row.cancellations.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'unmet_need' %>
+  <% if columns.include? 'unmet_need' %>
     <td class="number">
       <%= has_trips ? raw("&mdash;") : number_with_delimiter(row.unmet_need.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'other_results' %>
+  <% if columns.include? 'other_results' %>
     <td class="number">
       <%= has_trips ? raw("&mdash;") : number_with_delimiter(row.other_results.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'total_requests' %>
+  <% if columns.include? 'total_requests' %>
     <td class="number total">
       <%= has_trips ? raw("&mdash;") : number_with_delimiter(row.total_requests.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'mileage' %>
+  <% if columns.include? 'mileage' %>
     <td class="number">
       <%= number_with_delimiter(row.mileage.round) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'driver_volunteer_hours' %>
+  <% if columns.include? 'driver_volunteer_hours' %>
     <td class="number">
       <%= number_with_precision(row.driver_volunteer_hours, precision: 1, delimiter: ',') %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'driver_paid_hours' %>
+  <% if columns.include? 'driver_paid_hours' %>
     <td class="number">
       <%= number_with_precision(row.driver_paid_hours, precision: 1, delimiter: ',') %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'driver_total_hours' %>
+  <% if columns.include? 'driver_total_hours' %>
     <td class="number total">
       <%= number_with_precision(row.driver_total_hours, precision: 1, delimiter: ',') %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'cost_per_trip' %>
+  <% if columns.include? 'cost_per_trip' %>
     <td class="number">
       <%= row.cost_per_trip.present? ? number_to_currency(row.cost_per_trip, negative_format: "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'cost_per_customer' %>
+  <% if columns.include? 'cost_per_customer' %>
     <td class="number">
       <%= row.cost_per_customer.present? ? number_to_currency(row.cost_per_customer, negative_format: "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'cost_per_mile' %>
+  <% if columns.include? 'cost_per_mile' %>
     <td class="number">
       <%= row.cost_per_mile.present? ? number_to_currency(row.cost_per_mile, negative_format: "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'cost_per_hour' %>
+  <% if columns.include? 'cost_per_hour' %>
     <td class="number">
       <%= row.cost_per_hour.present? ? number_to_currency(row.cost_per_hour, negative_format: "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'miles_per_ride'%>
+  <% if columns.include? 'miles_per_ride'%>
     <td class="number">
       <%= row.miles_per_ride.present? ? number_with_precision(row.miles_per_ride, precision: 1, delimiter: ",") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'miles_per_customer'%>
+  <% if columns.include? 'miles_per_customer'%>
     <td class="number">
       <%= row.miles_per_customer.present? ? number_with_precision(row.miles_per_customer, precision: 1, delimiter: ",") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'undup_riders' %>
+  <% if columns.include? 'undup_riders' %>
     <td class="number">
       <%= number_with_delimiter(row.undup_riders.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'escort_volunteer_hours' %>
+  <% if columns.include? 'escort_volunteer_hours' %>
     <td class="number">
       <%= number_with_precision(row.escort_volunteer_hours, precision: 1, delimiter: ",") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'admin_volunteer_hours' %>
+  <% if columns.include? 'admin_volunteer_hours' %>
     <td class="number">
       <%= number_with_precision(row.admin_volunteer_hours, precision: 1, delimiter: ",") %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'total_volunteer_hours' %>
+  <% if columns.include? 'total_volunteer_hours' %>
     <td class="number total">
       <%= number_with_precision(row.total_volunteer_hours, precision: 1, delimiter: ",") %>
     </td>
