Rename fields related to volunteer driver trips
in allocations and flex reports

--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -80,9 +80,9 @@
       <%= number_with_delimiter(row.guest_and_attendant_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.fields.include? 'volunteer_trips' %>
+  <% if @report.fields.include? 'volunteer_driver_trips' %>
     <td class="number">
-      <%= number_with_delimiter(row.volunteer_trips.to_i) %>
+      <%= number_with_delimiter(row.volunteer_driver_trips.to_i) %>
     </td>
   <% end %>
   <% if @report.fields.include? 'total_trips' %>
