--- a/app/views/flex_reports/_columns.html.erb
+++ b/app/views/flex_reports/_columns.html.erb
@@ -53,8 +53,8 @@
         <label for="guest_and_attendant_trips">Guest and Attendant Trips</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("volunteer_trips") %> name="flex_report[fields[volunteer_trips]]" id="volunteer_trips" value="1" /> 
-        <label for="volunteer_trips">Volunteer Trips (Beta)</label>
+        <input type="checkbox" <%= checked?("volunteer_driver_trips") %> name="flex_report[fields[volunteer_driver_trips]]" id="volunteer_driver_trips" value="1" /> 
+        <label for="volunteer_driver_trips">Volunteer Driver Trips (Beta)</label>
       </li>
       <li>
         <input type="checkbox" <%= checked?("total_trips") %> name="flex_report[fields[total_trips]]" id="total_trips" value="1" /> 
