--- a/app/views/flex_reports/_simple_header.html.erb
+++ b/app/views/flex_reports/_simple_header.html.erb
@@ -17,6 +17,7 @@
     <% if rf.include? 'customer_trips' %><th class="wrap number">Customers</th><% end %>
     <% if rf.include? 'guest_and_attendant_trips' %><th class="wrap number">Guests and Attendants</th><% end %>
     <% if rf.include? 'volunteer_driver_trips' %><th class="wrap number">Volunteer Driver Trips</th><% end %>
+    <% if rf.include? 'paid_driver_trips' %><th class="wrap number">Paid Driver Trips</th><% end %>
     <% if rf.include? 'total_trips' %><th class="wrap number">Total Trips</th><% end %>
     <% if rf.include? 'mileage' %><th rowspan="2" class="wrap number">Mileage</th><% end %>
     <% if rf.include? 'driver_volunteer_hours' %><th class="wrap number">Volunteer Driver Hours</th><% end %>
