--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -85,6 +85,11 @@
       <%= number_with_delimiter(row.volunteer_driver_trips.to_i) %>
     </td>
   <% end %>
+  <% if @report.fields.include? 'paid_driver_trips' %>
+    <td class="number">
+      <%= number_with_delimiter(row.paid_driver_trips.to_i) %>
+    </td>
+  <% end %>
   <% if @report.fields.include? 'total_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.total_trips.to_i) %>
