--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -63,11 +63,7 @@
       <%= has_trips ? raw("&mdash;") : number_with_delimiter(row.guest_and_attendant_trips.to_i) %>
     </td>
   <% end %>
-<<<<<<< HEAD
-  <% if columns.include? 'volunteer_trips' %>
-=======
-  <% if @report.fields.include? 'volunteer_driver_trips' %>
->>>>>>> master
+  <% if columns.include? 'volunteer_driver_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.volunteer_driver_trips.to_i) %>
     </td>
