--- a/app/views/flex_reports/_filters.html.erb
+++ b/app/views/flex_reports/_filters.html.erb
@@ -5,57 +5,62 @@
 </div>
 <ol id="filters">
   <div class="section first">
-    <%= render 'filter', 
-      :title => "Reporting Agencies", 
+    <%= render 'filter',
+      :title => "Reporting Agencies",
       :name => "reporting_agencies",
       :list_items => @reporting_agencies,
       :values => @report.reporting_agency_ids %>
-    <%= render 'filter', 
-      :title => "Providers", 
+    <%= render 'filter',
+      :title => "Providers",
       :name => "providers",
       :list_items => @providers,
       :values => @report.provider_ids %>
-    <%= render 'filter', 
-      :title => "Programs", 
+    <%= render 'filter',
+      :title => "Programs",
       :name => "programs",
       :list_items => @programs,
       :values => @report.program_ids %>
-    <%= render 'filter', 
-      :title => "Funding Sources", 
+    <%= render 'filter',
+      :title => "Funding Sources",
       :name => "funding_sources",
       :list_items => @funding_sources,
       :values => @report.funding_source_ids %>
   </div>
   <div class="section second">
-    <%= render 'filter', 
-      :title => "Reporting Agency Types", 
+    <%= render 'filter',
+      :title => "Reporting Agency Types",
       :name => "reporting_agency_type_names",
       :list_items => @reporting_agency_types,
       :values => @report.reporting_agency_type_names %>
-    <%= render 'filter', 
-      :title => "Provider Types", 
+    <%= render 'filter',
+      :title => "Provider Types",
       :name => "provider_type_names",
       :list_items => @provider_types,
       :values => @report.provider_type_names %>
-    <%= render 'filter', 
-      :title => "Counties", 
+    <%= render 'filter',
+      :title => "Counties",
       :name => "county_names",
       :list_items => @county_names,
       :values => @report.county_names %>
-    <%= render 'filter', 
-      :title => "F.E. Projects", 
+    <%= render 'filter',
+      :title => "F.E. Projects",
       :name => "projects",
       :list_items => @projects,
       :values => @report.project_ids %>
   </div>
   <div class="section third">
-    <%= render 'filter', 
-      :title => "Service Types", 
+    <%= render 'filter',
+      :title => "Service Types",
       :name => "service_types",
       :list_items => @service_types,
       :values => @report.service_type_ids %>
-    <%= render 'filter', 
-      :title => "Individual Allocations", 
+    <%= render 'filter',
+      :title => "Trip Collection Methods",
+      :name => "trip_collection_methods",
+      :list_items => @trip_collection_methods,
+      :values => @report.trip_collection_methods %>
+    <%= render 'filter',
+      :title => "Individual Allocations",
       :name => "allocations",
       :list_items => @grouped_allocations,
       :values => @report.allocation_ids,
