Clean up row links to trips & summaries

--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -179,7 +179,7 @@
     </td>
   <% end %>
   <td class="no-print">
-    <%= row_trip_link @report, row %>
-    <%= row_summary_link @report, row %>
+    <%= row_trip_link row %>
+    <%= row_summary_link row %>
   </td>
 <% end %>
