--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -196,7 +196,7 @@
     </td>
   <% end %>
   <td class="no-print">
-    <%= row_trip_link @report, row %>
-    <%= row_summary_link @report, row %>
+    <%= row_trip_link row %>
+    <%= row_summary_link row %>
   </td>
 <% end %>
