Remove 'Beta' label from volunteer trips columns in flex reports

--- a/app/views/flex_reports/_columns.html.erb
+++ b/app/views/flex_reports/_columns.html.erb
@@ -7,149 +7,149 @@
   <div id="report-checkbox-area">
     <ol>
       <li>
-        <input type="checkbox" <%= checked?("funds") %> name="flex_report[fields[funds]]" id="funds" value="1" /> 
+        <input type="checkbox" <%= checked?("funds") %> name="flex_report[fields[funds]]" id="funds" value="1" />
         <label for="funds">RC Funds</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("agency_other") %> name="flex_report[fields[agency_other]]" id="agency_other" value="1" /> 
+        <input type="checkbox" <%= checked?("agency_other") %> name="flex_report[fields[agency_other]]" id="agency_other" value="1" />
         <label for="agency_other">Agency Other</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("vehicle_maint") %> name="flex_report[fields[vehicle_maint]]" id="vehicle_maint" value="1" /> 
+        <input type="checkbox" <%= checked?("vehicle_maint") %> name="flex_report[fields[vehicle_maint]]" id="vehicle_maint" value="1" />
         <label for="vehicle_maint">Vehicle Maint.</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("operations") %> name="flex_report[fields[operations]]" id="operations" value="1" /> 
+        <input type="checkbox" <%= checked?("operations") %> name="flex_report[fields[operations]]" id="operations" value="1" />
         <label for="operations">Operations</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("administrative") %> name="flex_report[fields[administrative]]" id="administrative" value="1" /> 
+        <input type="checkbox" <%= checked?("administrative") %> name="flex_report[fields[administrative]]" id="administrative" value="1" />
         <label for="administrative">Administrative</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("donations") %> name="flex_report[fields[donations]]" id="donations" value="1" /> 
+        <input type="checkbox" <%= checked?("donations") %> name="flex_report[fields[donations]]" id="donations" value="1" />
         <label for="donations">Donations</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("total") %> name="flex_report[fields[total]]" id="total" value="1" /> 
+        <input type="checkbox" <%= checked?("total") %> name="flex_report[fields[total]]" id="total" value="1" />
         <label for="total">Total Funds</label>
       </li>
     </ol>
     <ol>
       <li>
-        <input type="checkbox" <%= checked?("in_district_trips") %> name="flex_report[fields[in_district_trips]]" id="in_district_trips" value="1" /> 
+        <input type="checkbox" <%= checked?("in_district_trips") %> name="flex_report[fields[in_district_trips]]" id="in_district_trips" value="1" />
         <label for="in_district_trips">In District Trips</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("out_of_district_trips") %> name="flex_report[fields[out_of_district_trips]]" id="out_of_district_trips" value="1" /> 
+        <input type="checkbox" <%= checked?("out_of_district_trips") %> name="flex_report[fields[out_of_district_trips]]" id="out_of_district_trips" value="1" />
         <label for="out_of_district_trips">Out of District Trips</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("customer_trips") %> name="flex_report[fields[customer_trips]]" id="customer_trips" value="1" /> 
+        <input type="checkbox" <%= checked?("customer_trips") %> name="flex_report[fields[customer_trips]]" id="customer_trips" value="1" />
         <label for="customer_trips">Customer Trips</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("guest_and_attendant_trips") %> name="flex_report[fields[guest_and_attendant_trips]]" id="guest_and_attendant_trips" value="1" /> 
+        <input type="checkbox" <%= checked?("guest_and_attendant_trips") %> name="flex_report[fields[guest_and_attendant_trips]]" id="guest_and_attendant_trips" value="1" />
         <label for="guest_and_attendant_trips">Guest and Attendant Trips</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("volunteer_driver_trips") %> name="flex_report[fields[volunteer_driver_trips]]" id="volunteer_driver_trips" value="1" /> 
-        <label for="volunteer_driver_trips">Volunteer Driver Trips (Beta)</label>
+        <input type="checkbox" <%= checked?("volunteer_driver_trips") %> name="flex_report[fields[volunteer_driver_trips]]" id="volunteer_driver_trips" value="1" />
+        <label for="volunteer_driver_trips">Volunteer Driver Trips</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("paid_driver_trips") %> name="flex_report[fields[paid_driver_trips]]" id="paid_driver_trips" value="1" /> 
-        <label for="paid_driver_trips">Paid Driver Trips (Beta)</label>
+        <input type="checkbox" <%= checked?("paid_driver_trips") %> name="flex_report[fields[paid_driver_trips]]" id="paid_driver_trips" value="1" />
+        <label for="paid_driver_trips">Paid Driver Trips</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("total_trips") %> name="flex_report[fields[total_trips]]" id="total_trips" value="1" /> 
+        <input type="checkbox" <%= checked?("total_trips") %> name="flex_report[fields[total_trips]]" id="total_trips" value="1" />
         <label for="total_trips">Total Trips</label>
       </li>
     </ol>
     <ol>
       <li>
-        <input type="checkbox" <%= checked?("turn_downs") %> name="flex_report[fields[turn_downs]]" id="turn_downs" value="1" /> 
+        <input type="checkbox" <%= checked?("turn_downs") %> name="flex_report[fields[turn_downs]]" id="turn_downs" value="1" />
         <label for="turn_downs">Turn Downs</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("no_shows") %> name="flex_report[fields[no_shows]]" id="no_shows" value="1" /> 
+        <input type="checkbox" <%= checked?("no_shows") %> name="flex_report[fields[no_shows]]" id="no_shows" value="1" />
         <label for="no_shows">No Shows</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("cancellations") %> name="flex_report[fields[cancellations]]" id="cancellations" value="1" /> 
+        <input type="checkbox" <%= checked?("cancellations") %> name="flex_report[fields[cancellations]]" id="cancellations" value="1" />
         <label for="cancellations">Cancellations</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("unmet_need") %> name="flex_report[fields[unmet_need]]" id="unmet_need" value="1" /> 
+        <input type="checkbox" <%= checked?("unmet_need") %> name="flex_report[fields[unmet_need]]" id="unmet_need" value="1" />
         <label for="unmet_need">Unmet Need</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("other_results") %> name="flex_report[fields[other_results]]" id="other_results" value="1" /> 
+        <input type="checkbox" <%= checked?("other_results") %> name="flex_report[fields[other_results]]" id="other_results" value="1" />
         <label for="other_results">Other Result</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("total_requests") %> name="flex_report[fields[total_requests]]" id="total_requests" value="1" /> 
+        <input type="checkbox" <%= checked?("total_requests") %> name="flex_report[fields[total_requests]]" id="total_requests" value="1" />
         <label for="total_requests">Total Requests</label>
       </li>
     </ol>
     <ol>
       <li>
-        <input type="checkbox" <%= checked?("mileage") %> name="flex_report[fields[mileage]]" id="mileage" value="1" /> 
+        <input type="checkbox" <%= checked?("mileage") %> name="flex_report[fields[mileage]]" id="mileage" value="1" />
         <label for="mileage">Mileage</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("driver_volunteer_hours") %> name="flex_report[fields[driver_volunteer_hours]]" id="driver_volunteer_hours" value="1" /> 
+        <input type="checkbox" <%= checked?("driver_volunteer_hours") %> name="flex_report[fields[driver_volunteer_hours]]" id="driver_volunteer_hours" value="1" />
         <label for="driver_volunteer_hours">Volunteer Driver Hours</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("driver_paid_hours") %> name="flex_report[fields[driver_paid_hours]]" id="driver_paid_hours" value="1" /> 
+        <input type="checkbox" <%= checked?("driver_paid_hours") %> name="flex_report[fields[driver_paid_hours]]" id="driver_paid_hours" value="1" />
         <label for="driver_paid_hours">Paid Driver Hours</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("driver_total_hours") %> name="flex_report[fields[driver_total_hours]]" id="driver_total_hours" value="1" /> 
+        <input type="checkbox" <%= checked?("driver_total_hours") %> name="flex_report[fields[driver_total_hours]]" id="driver_total_hours" value="1" />
         <label for="driver_total_hours">Total Driver Hours</label>
       </li>
     </ol>
     <ol>
       <li>
-        <input type="checkbox" <%= checked?("cost_per_trip") %> name="flex_report[fields[cost_per_trip]]" id="cost_per_trip" value="1" /> 
+        <input type="checkbox" <%= checked?("cost_per_trip") %> name="flex_report[fields[cost_per_trip]]" id="cost_per_trip" value="1" />
         <label for="cost_per_trip">Cost/Trip</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("cost_per_customer") %> name="flex_report[fields[cost_per_customer]]" id="cost_per_customer" value="1" /> 
+        <input type="checkbox" <%= checked?("cost_per_customer") %> name="flex_report[fields[cost_per_customer]]" id="cost_per_customer" value="1" />
         <label for="cost_per_customer">Cost/Cust</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("cost_per_mile") %> name="flex_report[fields[cost_per_mile]]" id="cost_per_mile" value="1" /> 
+        <input type="checkbox" <%= checked?("cost_per_mile") %> name="flex_report[fields[cost_per_mile]]" id="cost_per_mile" value="1" />
         <label for="cost_per_mile">Cost/Mile</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("cost_per_hour") %> name="flex_report[fields[cost_per_hour]]" id="cost_per_hour" value="1" /> 
+        <input type="checkbox" <%= checked?("cost_per_hour") %> name="flex_report[fields[cost_per_hour]]" id="cost_per_hour" value="1" />
         <label for="cost_per_hour">Cost/Hour</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("miles_per_ride") %> name="flex_report[fields[miles_per_ride]]" id="miles_per_ride" value="1" /> 
+        <input type="checkbox" <%= checked?("miles_per_ride") %> name="flex_report[fields[miles_per_ride]]" id="miles_per_ride" value="1" />
         <label for="miles_per_ride">Miles/Trip</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("miles_per_customer") %> name="flex_report[fields[miles_per_customer]]" id="miles_per_customer" value="1" /> 
+        <input type="checkbox" <%= checked?("miles_per_customer") %> name="flex_report[fields[miles_per_customer]]" id="miles_per_customer" value="1" />
         <label for="miles_per_customer">Miles/Cust</label>
       </li>
     </ol>
     <ol>
       <li>
-        <input type="checkbox" <%= checked?("undup_riders") %> name="flex_report[fields[undup_riders]]" id="undup_riders" value="1" /> 
+        <input type="checkbox" <%= checked?("undup_riders") %> name="flex_report[fields[undup_riders]]" id="undup_riders" value="1" />
         <label for="undup_riders">Undup Riders</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("escort_volunteer_hours") %> name="flex_report[fields[escort_volunteer_hours]]" id="escort_volunteer_hours" value="1" /> 
+        <input type="checkbox" <%= checked?("escort_volunteer_hours") %> name="flex_report[fields[escort_volunteer_hours]]" id="escort_volunteer_hours" value="1" />
         <label for="escort_volunteer_hours">Volunteer Escort Hours</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("admin_volunteer_hours") %> name="flex_report[fields[admin_volunteer_hours]]" id="admin_volunteer_hours" value="1" /> 
+        <input type="checkbox" <%= checked?("admin_volunteer_hours") %> name="flex_report[fields[admin_volunteer_hours]]" id="admin_volunteer_hours" value="1" />
         <label for="admin_volunteer_hours">Volunteer Admin Hours</label>
       </li>
       <li>
-        <input type="checkbox" <%= checked?("total_volunteer_hours") %> name="flex_report[fields[total_volunteer_hours]]" id="total_volunteer_hours" value="1" /> 
+        <input type="checkbox" <%= checked?("total_volunteer_hours") %> name="flex_report[fields[total_volunteer_hours]]" id="total_volunteer_hours" value="1" />
         <label for="total_volunteer_hours">Total Non-Driver Volunteer Hours</label>
       </li>
     </ol>
