Improve label in flexreports form

--- a/app/views/flex_reports/_columns.html.erb
+++ b/app/views/flex_reports/_columns.html.erb
@@ -62,7 +62,7 @@
       </li>
       <li>
         <input type="checkbox" <%= checked?("total_trips") %> name="flex_report[fields[total_trips]]" id="total_trips" value="1" />
-        <label for="total_trips">Total Trips</label>
+        <label for="total_trips">Completed Trips</label>
       </li>
     </ol>
     <ol>
