Updates for new county reporting

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -155,6 +155,8 @@
         </ol>
         <input type="submit" name="output" value="Report">
         <input type="submit" name="output" value="CSV">
+        <input type="submit" name="output" value="Runs">
+        <input type="submit" name="output" value="Trips">
       </fieldset>
     <% end %>
   </div>
